# smartcore-js

./: .gitattributes  .gitignore  .mocharc.json  Cargo.toml  README.md  index.d.ts  index.js  index.ts  package-lock.json  package.json  smartcore-js.wasi-browser.js  smartcore-js.wasi.cjs  tsconfig.cjs.json  tsconfig.json  tsconfig.test.json
core-bindings/: browser.js  index.d.ts  index.js  smartcore-js.wasi-browser.js  smartcore-js.wasi.cjs
dist-cjs/: base_estimator.js  base_predictor.d.ts  base_predictor.js  base_transformer.js  data_frame.js  estimator.d.ts  index.d.ts  index.js  number_type_checkers.d.ts  number_type_checkers.js
scripts/: create-cjs-package.js
src/: change_array_type.rs  deserialize_variant.rs  distance_type.rs  js_number.rs  lib.rs  match_array_types.rs  predict_output.rs  traits.rs  typed_array.rs
src-js/: base_estimator.ts  base_predictor.ts  base_transformer.ts  data_frame.ts  estimator.ts  index.ts  number_type_checkers.ts  pipeline.ts
test/: .gitignore  custom.ts  dataframe.spec.ts  dataframe.spec.ts.pause  dbscan.spec.ts  e-commerce-enhanced.json  e-commerce.json  extra_trees_regressor.spec.ts  helpers.ts  iris_flower_classification.spec.ts  linear-model.spec.ts  load_dataset.ts  main.ts  one.spec.ts  pca.spec.ts  pca.ts  pca_test.ts  pipeline.spec.ts  pipeline.spec.ts.pause  random_forest_classifier.spec.ts  ridge_regression.ts  serde.spec.ts  serde.ts  steps-calories.json  svd.spec.ts
user-guide/: 01-getting-started.md  02-core-concepts.md  03-dataframe.md  04-linear-models.md  05-tree-models.md  06-svm.md  07-naive-bayes.md  (+10 more)
(+1002 files in other folders)
