
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "smartcore_js"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = {version = "3.0.0", features = ["napi6"]}
napi-derive = "3.0.0"
paste = "1.0.15"
smartcore = {version = "0.4.2", features = ["datasets"]}

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
