[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "smartcore_js"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = {version = "2.0.1", features = ["serde"]}
napi = {version = "3", features = ["napi6"]}
napi-derive = "3"
paste = "1.0.15"
serde = "1.0.228"
smartcore = {version = "0.4.2", features = ["datasets", "serde"]}

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
